some fixes to mitigate horizontal scroll bar

--- a/css/index.css
+++ b/css/index.css
@@ -159,7 +159,8 @@ header nav a:not(:hover){
 }
 
 .header-double section{
-	width:350px;
+	max-width: 350px;
+	width: 100%;
 }
 
 #header-img{
@@ -187,7 +188,7 @@ header nav a:not(:hover){
 
 .header-double h1{
 	text-align: center;
-	transform: scale(1.15,1);
+	width: 100%;
 }
 
 hr{
@@ -256,7 +257,8 @@ footer p{
 	display: block;
 	text-align: center;
 	font-size: 12px;
-	width: 400px;
+	max-width: 400px;
+	width: 100%;
 	height: 200px;
 	margin: auto;
 	margin-top: 50px;
@@ -411,7 +413,7 @@ li{
 	
 	.logo{
 		height: 30px;
-		background-size: 120px 30px;
+		background-size: 100% 100%;
 	}
 
 	header nav{
